# football-team-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: example.ipynb  trying.ipynb
src/football_team_analysis/: __init__.py  main.py  version.py
src/football_team_analysis/analysis/: crosses_analysis.py  general_comp.py  mileage_comp.py  pressing_analysis.py
src/football_team_analysis/utils/: kpi_calculation.py  load_data.py  removing_columns.py  renaming_columns.py  sorting_data.py
src/football_team_analysis/web_scraper/: bundesliga_scraper.py  team_stats.py  team_stats_2022.py  team_stats_2023.py  web_scraper_player_stats.py
